Register user - action + reducer done

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -577,8 +577,10 @@ button {
 }
 
 .alert-wrapper {
+  width: calc(100% - 4rem);
   position: fixed;
   top: 4rem;
   right: 2rem;
+  left: 2rem;
   display: inline-block;
 }
