--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,4 @@
-/* Global Styles */
+/* Global Styles -> Taken from the Course Author's Repo */
 :root {
   --primary-color: #17a2b8;
   --dark-color: #343a40;
